devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${repositoryName}-service
spec:
  selector:
    app: ${repositoryName}
  ports:
    - port: 443
      targetPort: ${internalPort}
  type: ClusterIP
