devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base-repository-ingress
  namespace: base-repository
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: teste.guaruja.sp.gov.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: base-repository
                port:
                  number: 443
  tls:
    - hosts:
        - teste.guaruja.sp.gov.br
      secretName: guarujaspgovbr-tls
